# PvsP-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Character.blend  Makefile  README.md  cmake_install.cmake  example  gitignore  icon.svg.import  main  main.cpp  project.godot
Entities/: Entity.tscn  character_state_machine.tscn  collectable.tscn  hitbox_component.tscn
Entities/BattleStar/: BattleStar.tscn  Collectable.gd  HitboxComponent.gd  StarBig.png.import
Entities/Player/: AirState.gd  Bump.gd  CharacterStateMachine.gd  GroundState.gd  Player.gd  Player.tscn  Small Mario.png.import  State.gd  StateDebug.gd  WallSlide.gd
Levels/: Stage-1.tscn
Tiles/: Block.gd  Block.tscn  NES - Super Mario Bros - Item and Brick Blocks.png.import  NES - Super Mario Bros - Tileset.png.import
assets/player/: Brobot.gltf  Skeleton.gltf  Skeleton.iqm  fgc_skeleton.blend
assets/tileset/: Cube.blend  Cube.blend1  Cube.gltf  KCL.tol
include/: CMakeLists.txt
src/: assetManager.cpp  assetManager.h  entity.cpp  entity.h  gameplay.cpp  gameplay.h  input.cpp  input.h  level.cpp  level.h  levelEditor.cpp  levelEditor.h  main.cpp  main.h  mdl.cpp  mdl.h  mu.h  player.cpp  player.h  playerState.h  playerStates.h  pvpScene.cpp  pvpScene.h  raymath.h  scene.cpp  scene.h  screen.cpp  screen.h  tile.cpp  tile.h  titleScreen.cpp  titleScreen.h  ui.cpp  ui.h
src/gbin/: gfile.cpp  gfile.h  gtypes.h
src/menu/: characterSelectScreen.cpp  characterSelectScreen.h  optionsScreen.cpp  optionsScreen.h  pvpScreen.cpp  pvpScreen.h  titleScreen.cpp  titleScreen.h
(+46 files in other folders)
